Small fix for the post listing layout.  Widened the date field.  With the new font it was wrapping

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -59,7 +59,7 @@ h4 {
 
 #post-list li span {
 	display: inline-block;
-	width: 85px;
+	width: 95px;
 }
 
 
